--- a/web/css/styl/jeet/goodies.styl
+++ b/web/css/styl/jeet/goodies.styl
@@ -1,4 +1,4 @@
-// Buttons
+// Buttons - Note: This buttons are horrible and are just used to show you how you, yourself, can extend Jeet!
 btn(bg_color = #eee, radius = 10px, style = flat)
     bs()
     display inline-block
@@ -28,7 +28,7 @@ btn(bg_color = #eee, radius = 10px, style = flat)
         if light(bg_color)
             color darken(bg_color, 80%)
 
-// ChromeFrame for IE6, 7, 8 
+// ChromeFrame for IE6, 7, 8 - Style this to suit your color scheme
 .chromeframe
     width 100%
     background #fff
@@ -38,7 +38,9 @@ btn(bg_color = #eee, radius = 10px, style = flat)
     text-shadow 0 1px 0 #fff
     p
         center()
-        padding 30px 0
+        padding 15px 0
+        margin-top 0
+        margin-bottom 0
         text-align center
         margin-bottom 0
         a
