Gave shading to edit()

--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -109,8 +109,9 @@ cf = clearfix
     box-sizing(border-box)
     *behavior url(js/vendor/boxsizing.htc)
 edit()
-    *
+    body *
         transition 200ms ease all
+        background rgba(#000, .15)
 html
     overflow-y scroll
     overflow-x hidden
