Removed max_width_padding from center() as elements now have a left and right margin and aren't butting up against edges anyway.

--- a/web/css/scss/jeet/_framework.scss
+++ b/web/css/scss/jeet/_framework.scss
@@ -16,13 +16,11 @@
 $gutter: 1;
 
 
-@mixin center($max_width: 1410px, $max_width_padding: 15px) {
+@mixin center($max_width: 1410px) {
     @include cf;
     max-width: $max_width;
     float: none !important;
     display: block;
-    padding-left: $max_width_padding;
-    padding-right: $max_width_padding;
     margin-right: auto !important;
     margin-left: auto !important;
     *margin-right: auto !important;
