--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -16,13 +16,11 @@
 
 gutter = 1
 
-center(max_width = 1410px, max_width_padding = 15px)
+center(max_width = 1410px)
     cf()
     max-width max_width
     float none !important
     display block
-    padding-left max_width_padding
-    padding-right max_width_padding
     margin-right auto !important
     margin-left auto !important
     *margin-right auto !important
