Re-added margin-left/right 0 to first/last children

--- a/web/css/sass/jeet/_framework.sass
+++ b/web/css/sass/jeet/_framework.sass
@@ -32,6 +32,10 @@ $gutter: 1
     width: (100 - $g * 2 * $g * ($number_of_nested_columns - 1)) / $number_of_nested_columns + unquote("%")
     margin-left: $g + unquote("%")
     margin-right: $g + unquote("%")
+    &:first-child
+      margin-left: 0
+    &:last-child
+      margin-right: 0
   @else
     width: $numerator / $denominator * 100 - $g * 2 + unquote("%")
     margin-left: $g + unquote("%")
