--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -33,6 +33,10 @@ column(numerator = 1, denominator = 1, number_of_nested_columns = 0)
         width ( (100 - (g*2) * g * (number_of_nested_columns - 1)) / number_of_nested_columns )% // Thanks flebron from #math
         margin-left (g)%
         margin-right (g)%
+        &:first-child
+            margin-left 0
+        &:last-child
+            margin-right 0
     else
         width (((numerator/denominator)*100) - (g*2))%
         margin-left (g)%
