Added g = gutter to framework for custom sized guttering

--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -26,7 +26,7 @@ center(max_width = 1410px)
     *margin-right auto !important
     *margin-left auto !important
 
-column(numerator = 1, denominator = 1, number_of_nested_columns = 0)
+column(numerator = 1, denominator = 1, number_of_nested_columns = 0, g = gutter)
     cf()
     float left
     if (number_of_nested_columns != 0)
