--- a/web/css/sass/jeet/_framework.sass
+++ b/web/css/sass/jeet/_framework.sass
@@ -25,7 +25,7 @@ $gutter: 1
   *margin-right: auto !important
   *margin-left: auto !important
 
-=column($numerator: 1, $denominator: 1, $number_of_nested_columns: 0)
+=column($numerator: 1, $denominator: 1, $number_of_nested_columns: 0, $g: $gutter)
   +cf
   float: left
   @if $number_of_nested_columns != 0
