--- a/web/css/scss/jeet/_framework.scss
+++ b/web/css/scss/jeet/_framework.scss
@@ -27,7 +27,7 @@ $gutter: 1;
     *margin-left: auto !important;
 }
 
-@mixin column($numerator: 1, $denominator: 1, $number_of_nested_columns: 0) {
+@mixin column($numerator: 1, $denominator: 1, $number_of_nested_columns: 0, $g: $gutter) {
     @include cf;
     float: left;
     @if $number_of_nested_columns !=0 {
