Added pxfix(), updated README

--- a/web/css/sass/jeet/_framework.sass
+++ b/web/css/sass/jeet/_framework.sass
@@ -3,6 +3,7 @@
 /*  Syntax quick reference
  *  ----------------------
  *  gutter[gut, g] = 1[float between 0 and 1]
+ *  cf() - clearfix
  *  center(max_width = 1410px)
  *  column[col](numerator = 1, denominator = 1, number_of_nested_columns = 0)
  *  span(numerator = 1, denominator = 1)
@@ -11,7 +12,7 @@
  *  bp(w = 705px, mobile_first = false[mf])
  *  endbp()
  *  stack(align = center[c, left, l, right, r])
- *  cf() - clearfix
+ *  pxfix()
 
 $gutter: 1
 
@@ -94,6 +95,11 @@ $gutter: 1
     text-align: right
   @else
     text-align: center
+
+=pxfix()
+  float: none
+  overflow: hidden
+  width: auto
 
 // aliases
 $g: $gutter
