--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -3,6 +3,7 @@
 /*  Syntax quick reference
  *  ----------------------
  *  gutter[gut, g] = 1[float between 0 and 1]
+ *  cf() - clearfix
  *  center(max_width = 1410px)
  *  column[col](numerator = 1, denominator = 1, number_of_nested_columns = 0)
  *  span(numerator = 1, denominator = 1)
@@ -11,7 +12,8 @@
  *  bp(w = 705px, mobile_first = false[mf])
  *  endbp()
  *  stack(align = center[c, left, l, right, r])
- *  cf() - clearfix
+ *  edit()
+ *  pxfix()
  */
 
 gutter = 1
@@ -88,6 +90,16 @@ stack(align = center)
     if (align == r) or (align == r)
         text-align right
 
+edit()
+    body *
+        transition 200ms ease all
+        background rgba(#000, .15)
+
+pxfix() // http://stackoverflow.com/a/12371926/1242079
+    float none
+    overflow hidden
+    width auto
+
 // Function aliases
 g = gutter
 gut = gutter
@@ -99,10 +111,6 @@ cf = clearfix
 *
     box-sizing(border-box)
     *behavior url(js/vendor/boxsizing.htc)
-edit()
-    body *
-        transition 200ms ease all
-        background rgba(#000, .15)
 html
     overflow-y scroll
     overflow-x hidden
