Use Compass box-sizing for SCSS/SASS

--- a/web/css/sass/jeet/_framework.sass
+++ b/web/css/sass/jeet/_framework.sass
@@ -116,7 +116,7 @@ $gut: $gutter
   +pie-clearfix
 
 *
-  box-sizing: border-box
+  +box-sizing(border-box)
   *behavior: url(js/vendor/boxsizing.htc)
 
 html
