Added ability to have equidistant nested column gutters. Removed requirement of specifying the number of nested columns, you set a nested flag to true or false instead. Condensed the numerator and denominator into a single argument called ratio. Col can be called like this now: col(1/4) or col(0.25) Added the parent_ratio argument, this is necessary for the equidistant gutters. Altered the way the get function is calculated. col, span and offset now all call the get function for their calculations.

--- a/web/css/sass/jeet/_framework.sass
+++ b/web/css/sass/jeet/_framework.sass
@@ -5,14 +5,15 @@
  *  gutter[gut, g] = 1[float between 0 and 1]
  *  cf() - clearfix
  *  center(max_width = 1410px)
- *  column[col](numerator = 1, denominator = 1, number_of_nested_columns = 0)
- *  span(numerator = 1, denominator = 1)
- *  offset[off](numerator = 0, denominator = 0, col_or_span = column[col, c, span, s], left_or_right = left[right])
- *  get(numerator = 1, denominator = 1, col_or_span = column[col, c, span, s])
+ *  column[col](ratio = 1, nested = false, parent_ratio = 1, g = gutter)
+ *  span(ratio = 1)
+ *  offset[off](ratio = 1, nested = false, left_or_right = left[right], col_or_span = column[col, c, span, s], g = gutter)
+ *  get(ratio = 1, nested = false, col_or_span = column[col, c, span, s], g = gutter)
  *  bp(w = 705px, mobile_first = false[mf])
  *  endbp()
  *  stack(align = center[c, left, l, right, r])
  *  pxfix()
+ */
 
 $gutter: 1
 
@@ -26,54 +27,52 @@ $gutter: 1
   *margin-right: auto !important
   *margin-left: auto !important
 
-=column($numerator: 1, $denominator: 1, $number_of_nested_columns: 0, $g: $gutter)
+=column($ratio: 1, $nested: false, $parent_ratio: 1, $g: $gutter)
   +cf
   float: left
-  @if $number_of_nested_columns != 0
-    width: (100 - ($g * 2) * ($number_of_nested_columns - 1)) / $number_of_nested_columns + unquote("%")
-    margin-left: $g + unquote("%")
-    margin-right: $g + unquote("%")
+  $parent_ratio: get($parent_ratio, $nested) / 100
+  $g: $g / $parent_ratio
+  width: (get($ratio, $nested, $g: $g)) + unquote("%")
+  $total_gutter: ($g*2) / $ratio
+  @if $nested == true
     &:first-child
       margin-left: 0
     &:last-child
       margin-right: 0
-  @else
-    width: $numerator / $denominator * 100 - $g * 2 + unquote("%")
-    margin-left: $g + unquote("%")
-    margin-right: $g + unquote("%")
+  margin-left: $g + unquote("%")
+  margin-right: $g + unquote("%")
 
-=span($numerator: 1, $denominator: 1)
+=span($ratio: 1)
   +cf
   float: left
-  width: $numerator / $denominator * 100 + unquote("%")
+  width: (get($ratio, $col_or_span: span)) + unquote("%")
   margin-left: 0
   margin-right: 0
 
-=offset($numerator: 0, $denominator: 0, $left_or_right: left, $col_or_span: column)
-  $n: $numerator
-  $d: $denominator
-  $span: $n / $d * 100
-  $col: $n / $d * 100 + $g
-  @if $col_or_span == span or $col_or_span == s
-    @if $left_or_right == right or $left_or_right == r
-      margin-right: $span + unquote("%")
-    @else
-      margin-left: $span + unquote("%")
+=offset($ratio: 0, $nested: false, $parent_ratio: 1, $left_or_right: left, $col_or_span: column, $g: $gutter)
   @if $col_or_span == column or $col_or_span == col or $col_or_span == c
+    $parent_ratio: get($parent_ratio, $nested) / 100
+    $g: $g / $parent_ratio
+    $margin: (get($ratio, $nested, $g: $g) + ($g*3))
+    @if $left_or_right == left or $left_or_right == l
+      margin-left: $margin + unquote("%")
     @if $left_or_right == right or $left_or_right == r
-      margin-right: $col + unquote("%")
-    @else
-      margin-left: $col + unquote("%")
-
-@function get($numerator: 1, $denominator: 1, $col_or_span: column)
-  $n: $numerator
-  $d: $denominator
-  $span: $n / $d * 100
-  $col: $n / $d * 100 - $g * 2
+      margin-right: $margin + unquote("%")
   @if $col_or_span == span or $col_or_span == s
-    @return $span + unquote("%")
-  @else
-    @return $col + unquote("%")
+    $margin: get($ratio, $col_or_span: span)
+    @if $left_or_right == left or $left_or_right == l
+      margin-left: $margin + unquote("%")
+    @if $left_or_right == right or $left_or_right == r
+      margin-left: $margin + unquote("%")
+
+@function get($ratio: 1, $nested: false, $col_or_span: column, $g: $gutter)
+  @if $col_or_span == span or $col_or_span == s
+    @return ($ratio * 100)
+  @else if $col_or_span == column or $col_or_span == col or $col_or_span == c
+    $total_gutter: ($g*2)/$ratio
+    @if $nested == true
+      $total_gutter: $total_gutter - ($g*2)
+    @return ((100 - $total_gutter) * $ratio)
 
 =bp($w: 705px, $mobile_first: false)
   @if $mobile_first == mf or $mobile_first == true
