--- a/web/css/scss/jeet/_framework.scss
+++ b/web/css/scss/jeet/_framework.scss
@@ -1,94 +1,149 @@
 @import 'compass';
+
 /*  Syntax quick reference
  *  ----------------------
- *  gutter[gut, g] = 1[float between 0 and 1]
+ *  gutter[gut, g] = 1
  *  cf() - clearfix
  *  center(max_width = 1410px)
- *  column[col](ratio = 1, nested = false, parent_ratio = 1, g = gutter)
- *  span(ratio = 1)
- *  offset[off](ratio = 1, nested = false, left_or_right = left[right], col_or_span = column[col, c, span, s], g = gutter)
- *  get(ratio = 1, nested = false, col_or_span = column[col, c, span, s], g = gutter)
+ *  column[col](ratios = 1, offset = false, g = gutter)
+ *  span(ratio = 1, offset = false)
+ *  shift(ratios = 0, g = gutter)
+ *  unshift()
+ *  getSpan(ratio)
+ *  getColumn(ratios = 1, g = gutter, nested = false)
  *  bp(w = 705px, mobile_first = false[mf])
  *  endbp()
  *  stack(align = center[c, left, l, right, r])
+ *  edit()
  *  pxfix()
  */
 
 $gutter: 1;
+$parent_first: false;
+$layout_direction: LTR;
 
 
 @mixin center($max_width: 1410px) {
     @include cf;
     max-width: $max_width;
-    float: none !important;
+    float: none;
     display: block;
-    margin-right: auto !important;
-    margin-left: auto !important;
-    *margin-right: auto !important;
-    *margin-left: auto !important;
+    margin-right: auto;
+    margin-left: auto;
+    *margin-right: auto;
+    *margin-left: auto;
 }
 
-@mixin column($ratio: 1, $nested: false, $parent_ratio: 1, $g: $gutter) {
+@mixin column($ratios: 1, $offset: false, $g: $gutter) {
+    // Gather information
+    $side: getLayoutDirection();
+    $margin_side: $side;
+    $widths: getColumn($ratios, $g);
+    $margin_l: nth($widths, 2);
+    $margin_r: $margin_l;
+    $margin_l_n: 0;
+    $margin_r_n: 0;
+    $nested: if(length($ratios) > 1, true, false);
+    // Calculate Offset
+    @if $offset != false {
+        $edge: false;
+        @if length($offset) > 1 {
+            $edge: nth($offset, 2);
+        }
+        $gutter_mult: if($edge == true, 2, 3);
+        $offset: nth($offset, 1);
+        @if $offset < 0 {
+            $offset: $offset * -1;
+            $offset: nth(getColumn($offset, nth($widths, 2), $nested), 1);
+            $margin_r: $offset + nth($widths, 2) * $gutter_mult;
+            $margin_r_n: $margin_r;
+        } @else {
+            $offset: nth(getColumn($offset, nth($widths, 2), $nested), 1);
+            $margin_l: $offset + nth($widths, 2) * $gutter_mult;
+            $margin_l_n: $margin_l;
+        }
+    }
+    // Mixin
     @include cf;
-    float: left;
-    $parent_ratio: get($parent_ratio, $nested) / 100;
-    $g: $g / $parent_ratio;
-    width: (get($ratio, $nested, $g: $g)) + unquote("%");
-    $total_gutter: ($g*2) / $ratio;
+    float: $side;
+    width: nth($widths, 1) + unquote("%");
+    margin-#{$margin_side}: $margin_l + unquote("%");
+    margin-#{opposite-position($margin_side)}: $margin_r + unquote("%");
     @if $nested == true {
         &:first-child {
-            margin-left: 0;
+            margin-#{$margin_side}: $margin_l_n + unquote("%");
         }
         &:last-child {
-            margin-right: 0;
+            margin-#{opposite-position($margin_side)}: $margin_r_n + unquote("%");
         }
     }
-    margin-left: $g + unquote("%");
-    margin-right: $g + unquote("%");
 }
 
-@mixin span($ratio: 1) {
+@mixin span($ratio: 1, $offset: false) {
+    // Gather Information
+    $side: getLayoutDirection();
+    $width: getSpan($ratio);
+    $margin_l: 0;
+    $margin_r: 0;
+    // Calculate Offset
+    @if $offset != false {
+        @if $offset < 0 {
+            $offset: $offset * -1;
+            $margin_r: getSpan($offset);
+        } @else {
+            $margin_l: getSpan($offset);
+        }
+    }
+    // Mixin
     @include cf;
-    float: left;
-    width: (get($ratio, $col_or_span: span)) + unquote("%");
-    margin-left: 0;
-    margin-right: 0;
+    float: $side;
+    width: $width + unquote("%");
+    margin-#{$side}: $margin_l + unquote("%");
+    margin-#{opposite-position($side)}: $margin_r + unquote("%");
 }
 
-@mixin offset($ratio: 0, $nested: false, $parent_ratio: 1, $left_or_right: left, $col_or_span: column, $g: $gutter) {
-    @if $col_or_span == column or $col_or_span == col or $col_or_span == c {
-        $parent_ratio: get($parent_ratio, $nested) / 100;
-        $g: $g / $parent_ratio;
-        $margin: (get($ratio, $nested, $g: $g) + ($g*3));
-
-        @if $left_or_right == left or $left_or_right == l {
-            margin-left: $margin + unquote("%");
-        }
-        @if $left_or_right == right or $left_or_right == r {
-            margin-right: $margin + unquote("%");
-        }
+@mixin shift($ratios: 0, $g: $gutter) {
+    // Get direction information
+    $side: getLayoutDirection();
+    @if $side == right {
+        $ratios: replace-nth($ratios, 1, nth($ratios, 1) * -1);
     }
-    @if $col_or_span == span or $col_or_span == s {
-        $margin: get($ratio, $col_or_span: span);
-        @if $left_or_right == left or $left_or_right == l {
-            margin-left: $margin + unquote("%");
-        }
-        @if $left_or_right == right or $left_or_right == r {
-            margin-left: $margin + unquote("%");
-        }
-    }
+    $widths: getColumn($ratios, $g);
+    $translate: nth($widths, 1) + nth($widths, 2) * 2;
+    // Shift
+    position: relative;
+    left: $translate + unquote("%"); 
 }
 
-@function get($ratio: 1, $nested: false, $col_or_span: column, $g: $gutter) {
-    @if $col_or_span == span or $col_or_span == s {
-        @return ($ratio * 100);
-    } @else if $col_or_span == column or $col_or_span == col or $col_or_span == c {
-        $total_gutter: ($g*2)/$ratio;
-        @if $nested == true {
-            $total_gutter: $total_gutter - ($g*2);
+@mixin unshift() {
+    position: static;
+    left: 0;
+}
+
+@function getSpan($ratio: 1) {
+    // Returns the width of a span
+    @return $ratio * 100;
+}
+
+@function getColumn($ratios: 1, $g: $gutter, $nested: false) {
+    // Returns the width and gutter for a column
+    @if $parent_first != true { $ratios: reverse($ratios); }
+    $w: 100;
+    $i: 0;
+    @each $ratio in $ratios {
+        $g: $g / $w * 100;
+        $w: 100 * $ratio - 2 * $g;
+        @if $i != 0 or $nested == true {
+            $w: $w + 2 * $ratio * $g;
         }
-        @return ((100 - $total_gutter) * $ratio);
+        $i: $i + 1;
     }
+    @return $w $g;
+}
+
+@function getLayoutDirection() {
+    $result: if($layout_direction == RTL, right, left);
+    @return $result;
 }
 
 @mixin bp($w: 705px, $mobile_first: false) {
@@ -103,8 +158,8 @@ $gutter: 1;
 @mixin stack($align: c) {
     display: block;
     width: 100%;
-    margin-left: auto !important;
-    margin-right: auto !important;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: $g + unquote("%");
     @if $align == left or $align == l{
         text-align: left;
@@ -115,10 +170,53 @@ $gutter: 1;
     }
 }
 
+@mixin edit() {
+    body * {
+        transition: 200ms ease all;
+        background: rgba(#000, .15);
+    }
+}
+
 @mixin pxfix() { // http://stackoverflow.com/a/12371926/1242079
     float: none;
     overflow: hidden;
     width: auto;
+}
+
+// List functions
+@function replace-nth($list, $index, $value) {
+    $result: ();
+    $index: if($index < 0, length($list) + $index + 1, $index);
+    @for $i from 1 through length($list) {
+        @if $i == $index {
+            $result: append($result, $value);
+        }
+        @else {
+            $result: append($result, nth($list, $i));
+        }
+    }
+    @return $result;
+}
+
+@function remove-nth($list, $index) {
+    $result: ();
+    $index: if($index < 0, length($list) + $index + 1, $index);  
+
+    @for $i from 1 through length($list) {
+        @if $i != $index {
+            $result: append($result, nth($list, $i));
+        }
+    }
+    @return $result;
+}
+
+@function reverse($list) {
+    $result: ();
+
+    @for $i from length($list)*-1 through -1 {
+        $result: append($result, nth($list, abs($i)));
+    }
+    @return $result;
 }
 
 // aliases
@@ -126,9 +224,6 @@ $g: $gutter;
 $gut: $gutter;
 @mixin col($args...) {
     @include column($args...)
-}
-@mixin off($args...) {
-    @include offset($args...)
 }
 // compass mixin
 @mixin cf{
